--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,54 +1,43 @@
 .navbar-no-shadow {
   z-index: 101;
-  grid-column-gap: 16px;
-  grid-row-gap: 16px;
-  -webkit-text-fill-color: inherit;
-  mix-blend-mode: normal;
-  background-clip: border-box;
-  flex-flow: column;
-  grid-template-rows: auto auto;
-  grid-template-columns: 1fr 1fr;
-  grid-auto-columns: 1fr;
+  display: flex;
   justify-content: center;
   align-items: center;
-  display: block;
   position: fixed;
-  top: 0%;
-  bottom: auto;
-  left: 0%;
-  right: 0%;
+  top: 0;
+  width: 100%;
 }
+
 .navbar-no-shadow-container {
   z-index: 5;
   background-color: #fff;
-  border: 0 solid #000;
   border-top: 15px solid #fff;
-  border-bottom-width: 2px;
+  border-bottom: 2px solid #000;
   width: 100%;
   max-width: 1140px;
-  margin-top: 0;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
   padding: 20px 20px 20px 0;
   font-family: Georgia, Times, Times New Roman, serif;
 }
+
 .navbar-wrapper {
+  display: flex;
   justify-content: space-between;
   align-items: center;
-  font-family: Georgia, Times, Times New Roman, serif;
-  display: flex;
 }
-.w-nav-brand {
-  float: left;
-  color: #333;
+
+.nav-link {
+  color: #1a1b1f;
+  letter-spacing: 0.25px;
+  margin: 0 5px;
+  padding: 5px 10px;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 20px;
   text-decoration: none;
-  position: relative;
 }
-.nav-menu {
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 0;
-  padding-bottom: 0;
-  padding-left: 0;
-  display: flex;
+
+.bold-text-18 {
+  border-bottom: 2px solid #000;
+  font-weight: 400;
 }
