font weight fix

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -32,12 +32,12 @@
   margin: 0 5px;
   padding: 5px 10px;
   font-size: 18px;
-  font-weight: 400;
+  font-weight: 200;
   line-height: 20px;
   text-decoration: none;
 }
 
-.bold-text-18 {
+.current {
   border-bottom: 2px solid #000;
   font-weight: 400;
 }
