--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,12 +5,10 @@
                 <div class="text-block">Matthias van Houtum</div>
             </a>
             <nav class="nav-menu">
-                <a href="https://www.matthiasvanhoutum.com/Photo" class="nav-link"><strong
-                        class="bold-text-18">Photo</strong></a>
-                <a href="https://www.matthiasvanhoutum.com/video" class="nav-link"><strong
-                        class="bold-text-18">Video</strong></a>
-                <a href="https://www.matthiasvanhoutum.com/" class="nav-link w--current"><strong
-                        class="bold-text-18">About</strong></a>
+                <a href="https://www.matthiasvanhoutum.com/" class="nav-link">About</a>
+                <a href="https://www.matthiasvanhoutum.com/Photo" class="nav-link">Photo</a>
+                <a href="https://www.matthiasvanhoutum.com/video" class="nav-link">Video</a>
+
             </nav>
         </div>
     </div>
