--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,13 +1,13 @@
-<div class="navbar-no-shadow">
-    <div class="navbar-no-shadow-container">
+<div class="navbar">
+    <div class="navbar-container">
         <div class="navbar-wrapper">
-            <a href="https://www.matthiasvanhoutum.com/#" class="w-nav-brand">
-                <div class="text-block">Matthias van Houtum</div>
+            <a routerLink="/home" class="title">
+                Matthias van Houtum
             </a>
             <nav class="nav-menu">
-                <a href="https://www.matthiasvanhoutum.com/" class="nav-link">About</a>
-                <a href="https://www.matthiasvanhoutum.com/Photo" class="nav-link">Photo</a>
-                <a href="https://www.matthiasvanhoutum.com/video" class="nav-link">Video</a>
+                <a routerLink="/home" class="nav-link" routerLinkActive="active">About</a>
+                <a routerLink="/photo" class="nav-link" routerLinkActive="active">Photo</a>
+                <a routerLink="/video" class="nav-link" routerLinkActive="active">Video</a>
 
             </nav>
         </div>
