--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,43 +1,53 @@
-.navbar-no-shadow {
-  z-index: 101;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  top: 0;
-  width: 100%;
+.navbar {
+    z-index: 101;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    margin: 0;
+    padding: 0;
 }
 
-.navbar-no-shadow-container {
-  z-index: 5;
-  background-color: #fff;
-  border-top: 15px solid #fff;
-  border-bottom: 2px solid #000;
-  width: 100%;
-  max-width: 1140px;
-  margin: 0 auto;
-  padding: 20px 20px 20px 0;
-  font-family: Georgia, Times, Times New Roman, serif;
+.navbar-container {
+    z-index: 5;
+    background-color: #fff;
+    border-top: 15px solid #fff;
+    border-bottom: 2px solid #000;
+    width: 940px;
+    // margin: 0 auto;
+    padding: 20px 20px 20px 0;
+    font-family: Georgia, Times, Times New Roman, serif;
+    min-height: 30px;
 }
 
 .navbar-wrapper {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .nav-link {
-  color: #1a1b1f;
-  letter-spacing: 0.25px;
-  margin: 0 5px;
-  padding: 5px 10px;
-  font-size: 18px;
-  font-weight: 200;
-  line-height: 20px;
-  text-decoration: none;
+    color: #1a1b1f;
+    letter-spacing: 0.25px;
+    margin: 0 15px;
+    font-size: 18px;
+    font-weight: 200;
+    line-height: 20px;
+    text-decoration: none;
 }
 
-.current {
-  border-bottom: 2px solid #000;
-  font-weight: 400;
+.nav-link.active {
+    border-bottom: 2px solid #000;
+    font-weight: 400;
+}
+
+.title {
+    color: #000;
+    padding-left: 55px;
+    font-family: Georgia, Times, Times New Roman, serif;
+    font-size: 18px;
+    text-decoration: none;
 }
