--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,13 +1,13 @@
 <div class="navbar">
-    <div class="navbar-container">
-        <div class="navbar-wrapper">
+    <div class="container">
+        <div class="wrapper">
             <a routerLink="/home" class="title">
                 Matthias van Houtum
             </a>
-            <nav class="nav-menu">
-                <a routerLink="/home" class="nav-link" routerLinkActive="active">About</a>
-                <a routerLink="/photo" class="nav-link" routerLinkActive="active">Photo</a>
-                <a routerLink="/video" class="nav-link" routerLinkActive="active">Video</a>
+            <nav class="menu">
+                <a routerLink="/home" class="link" routerLinkActive="active">About</a>
+                <a routerLink="/photo" class="link" routerLinkActive="active">Photo</a>
+                <a routerLink="/video" class="link" routerLinkActive="active">Video</a>
 
             </nav>
         </div>
