--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,53 +1,58 @@
 .navbar {
-    z-index: 101;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    margin: 0;
-    padding: 0;
+  z-index: 101;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  user-select: none;
 }
 
-.navbar-container {
-    z-index: 5;
-    background-color: #fff;
-    border-top: 15px solid #fff;
-    border-bottom: 2px solid #000;
-    width: 940px;
-    // margin: 0 auto;
-    padding: 20px 20px 20px 0;
-    font-family: Georgia, Times, Times New Roman, serif;
-    min-height: 30px;
+.container {
+  z-index: 5;
+  background-color: #fff;
+  border-top: 15px solid #fff;
+  border-bottom: 2px solid #000;
+  width: 1120px;
+  // margin: 0 auto;
+  padding: 20px 20px 20px 0;
+  font-family: Georgia, Times, Times New Roman, serif;
+  min-height: 30px;
 }
 
-.navbar-wrapper {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.nav-link {
-    color: #1a1b1f;
-    letter-spacing: 0.25px;
-    margin: 0 15px;
-    font-size: 18px;
-    font-weight: 200;
-    line-height: 20px;
-    text-decoration: none;
+.link {
+  color: #1a1b1f;
+  letter-spacing: 0.25px;
+  margin: 0 15px;
+  font-size: 18px;
+  font-weight: 200;
+  line-height: 20px;
+  text-decoration: none;
 }
 
-.nav-link.active {
-    border-bottom: 2px solid #000;
-    font-weight: 400;
+.link.active {
+  border-bottom: 2px solid #000;
+  font-weight: 400;
+}
+
+.menu {
+  margin-right: 50px;
 }
 
 .title {
-    color: #000;
-    padding-left: 55px;
-    font-family: Georgia, Times, Times New Roman, serif;
-    font-size: 18px;
-    text-decoration: none;
+  color: #000;
+  padding-left: 55px;
+  font-family: Georgia, Times, Times New Roman, serif;
+  font-size: 18px;
+  text-decoration: none;
 }
