--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,15 @@
-<p>home works!</p>
+<div id="row1">
+    <h1>
+        Matthias van houtum
+    </h1>
+</div>
+<img id="portretfoto" src="/66564c2d395bdd3d2b87c5e7_4QG1h8zxSY2WbqGSZ2ur__mg_8137.jpeg"
+    alt="een mooie foto van Matthias van houtum">
+<p>From a young age, I've been captivated by the human experience of perceiving the world around us, how we shape our
+    realities, and the narratives we construct. Currently, I'm pursuing my studies in IMT, Image and Media Technology at
+    HKU; University of
+    the Arts Utrecht. In my own visuals, I strive to show the extraordinary within the seemingly ordinary and to
+    liberate reality from the invented frameworks we impose on it. I draw inspiration from my immediate surroundings,
+    such as nature and the urban
+    landscape, the often beautiful erosion of lifeless objects, and life beyond the everyday theater of humanity. I
+    currently utilize various media such as photography, graphic design, and videography.</p>
