--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,8 @@
 #content {
-    max-width: 940px;
-    margin-top: 150px;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
+  max-width: 900px;
+  margin-top: 94px;
+  padding: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
