--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,15 +1,19 @@
 <div id="row1">
     <h1>
-        Matthias van houtum
+        Matthias van Houtum
     </h1>
 </div>
 <img id="portretfoto" src="/66564c2d395bdd3d2b87c5e7_4QG1h8zxSY2WbqGSZ2ur__mg_8137.jpeg"
     alt="een mooie foto van Matthias van houtum">
-<p>From a young age, I've been captivated by the human experience of perceiving the world around us, how we shape our
-    realities, and the narratives we construct. Currently, I'm pursuing my studies in IMT, Image and Media Technology at
-    HKU; University of
-    the Arts Utrecht. In my own visuals, I strive to show the extraordinary within the seemingly ordinary and to
+<p id="paragraph1">From a young age, I've been captivated by the human experience of perceiving the world around us, how
+    we shape our realities, and the narratives we construct. Currently, I'm pursuing my studies in IMT, Image and Media
+    Technology at HKU; University of
+    the Arts Utrecht.<br> In my own visuals, I strive to show the extraordinary within the seemingly ordinary and to
     liberate reality from the invented frameworks we impose on it. I draw inspiration from my immediate surroundings,
-    such as nature and the urban
-    landscape, the often beautiful erosion of lifeless objects, and life beyond the everyday theater of humanity. I
-    currently utilize various media such as photography, graphic design, and videography.</p>
+    such as nature and the
+    urban landscape, the often beautiful erosion of lifeless objects, and life beyond the everyday theater of humanity.
+    I currently utilize various media such as photography, graphic design, and videography.</p>
+<p id="paragraph2">You can contact me directly through <br>Instagram: <a
+        href="https://www.instagram.com/houtum.van.matthias/" target="_blank">&#64;houtum.van.matthias</a>
+    <br>email: <a href="mailto:matthiasvanhoutum@gmail.com">Matthiasvanhoutum&#64;gmail.com</a>
+</p>
