--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -14,5 +14,25 @@
 
 #portretfoto {
   width: 900px;
-  margin: 40px 0 0 0;
+  margin: 43px 0 16px 0;
+}
+
+#paragraph1 {
+  margin: 0px 0px 27px 0px;
+  text-align: left;
+  flex-flow: column;
+  margin: 2% 3%;
+  font-family: Georgia, Times, Times New Roman, serif;
+  font-size: 15px;
+  line-height: 20px;
+}
+
+#paragraph2 {
+  text-align: center;
+  padding-top: 0%;
+  padding-left: 0%;
+  padding-right: 0;
+  margin-top: 58px;
+  font-size: 14px;
+  line-height: 20px;
 }
