end of day commit

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,15 +1,15 @@
-<div class="navbar">
-    <div class="container">
-        <div class="wrapper">
-            <a routerLink="/home" class="title">
-                Matthias van Houtum
-            </a>
-            <nav class="menu">
-                <a routerLink="/home" class="link" routerLinkActive="active">About</a>
+<!-- <div class="navbar"> -->
+<div class="container">
+    <div class="wrapper">
+        <a routerLink="/home" class="title">
+            Matthias van Houtum
+        </a>
+        <nav class="menu">
+            <a routerLink="/home" class="link" routerLinkActive="active">About</a>
 
-                <a routerLink="/video" class="link" routerLinkActive="active">Video</a>
-                <a routerLink="/photo" class="link" routerLinkActive="active">Photo</a>
-            </nav>
-        </div>
+            <a routerLink="/video" class="link" routerLinkActive="active">Video</a>
+            <a routerLink="/photo" class="link" routerLinkActive="active">Photo</a>
+        </nav>
     </div>
 </div>
+<!-- </div> -->
