--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,3 +2,4 @@
     <p>Matthias van Houtum</p>
     <img height="20px" src="65f06158687aa96545270241_instagram.svg">
 </div>
+<p>© Copyright 2024</p>
