--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,6 @@
 <div>
     <p>Matthias van Houtum</p>
-    <img height="20px" src="65f06158687aa96545270241_instagram.svg">
+    <a href="https://www.instagram.com/houtum.van.matthias/" target="_blank">
+        <img height="20px" src="65f06158687aa96545270241_instagram.svg"></a>
 </div>
-<p>© Copyright 2024</p>
+<p id="Copyright">© Copyright 2024</p>
