--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -3,7 +3,7 @@
   background-color: #fff;
   border-top: 2px solid #000;
   flex-flow: column;
-  margin-top: 63px;
+  margin-top: 59px;
   margin-bottom: -82px;
   margin-left: 0;
   padding: 29px 0% 60px;
@@ -20,8 +20,15 @@
 div {
   display: flex;
   flex-direction: row;
+  margin-top: 17px;
   & p {
-    margin: 0 20px 0 0;
-    font-size: 20px;
+    margin: 0px 20px 0 0;
+    font-size: 18px;
   }
+}
+
+#Copyright {
+  font-size: 16px;
+  font-weight: 400;
+  margin-top: 27px;
 }
