--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,11 +8,11 @@
 <p id="paragraph1">From a young age, I've been captivated by the human experience of perceiving the world around us, how
     we shape our realities, and the narratives we construct. Currently, I'm pursuing my studies in IMT, Image and Media
     Technology at HKU; University of
-    the Arts Utrecht.<br> In my own visuals, I strive to show the extraordinary within the seemingly ordinary and to
+    the Arts Utrecht.<br><br> In my own visuals, I strive to show the extraordinary within the seemingly ordinary and to
     liberate reality from the invented frameworks we impose on it. I draw inspiration from my immediate surroundings,
-    such as nature and the
-    urban landscape, the often beautiful erosion of lifeless objects, and life beyond the everyday theater of humanity.
-    I currently utilize various media such as photography, graphic design, and videography.</p>
+    such as nature and
+    the urban landscape, the often beautiful erosion of lifeless objects, and life beyond the everyday theater of
+    humanity. I currently utilize various media such as photography, graphic design, and videography.</p>
 <p id="paragraph2">You can contact me directly through <br>Instagram: <a
         href="https://www.instagram.com/houtum.van.matthias/" target="_blank">&#64;houtum.van.matthias</a>
     <br>email: <a href="mailto:matthiasvanhoutum@gmail.com">Matthiasvanhoutum&#64;gmail.com</a>
