--- a/src/app/components/photo/photo.component.html
+++ b/src/app/components/photo/photo.component.html
@@ -1,1 +1,12 @@
-<p>photo works!</p>
+<img src="65f8c680761915ce1814b5a5_BW-Berlijn20230530_11-p-1080.jpeg" class="image-4">
+<img src="65f992bf9e18b97bec258676_napels20240208_14402346_0049.jpg" class="image-8">
+<img src="66053f792f83fed9e58e60c3_napels20240208_14384319_0047.jpg" class="image-21">
+<img src="65f992bf7da8032d583ebcd9_napels20240208_15064266_0066.jpg" class="image-5">
+<img src="65f992a2020ea8765351ae73_BW 1600 dpi20231129_41.jpg" class="image-7">
+<img src="65f992c07761d99099b5e6f3_BW 1600 dpi20231129_25-Edit.jpg" class="image-6">
+<img src="660537a786b3a4bdc1c7bf9e_Ferns-large-size.jpeg" class="image-12">
+<img src="660537ec496490cee57a12c0_test22.jpg" class="image-13">
+<img src="65f992c239f7161230324015_BW Berlijn20230530_25.jpg" class="image-15">
+<img src="660538e77a69bb1d8078930d_Sky large size.png" class="image-14">
+<img src="66053ad18af3bb609939660c_BW 1600 dpi20231129_38-Edit.jpg" class="image-18">
+<img src="65f992bed541111831d08edf_BW 1600 dpi20231129_44.jpg" class="image-22">
