--- a/src/app/components/photo/photo.component.html
+++ b/src/app/components/photo/photo.component.html
@@ -1,1 +1,5 @@
-<p>photo works!</p>
+<h1 id="header1">Photography</h1>
+<p>Photography has served as my primary outlet for creativity over the years, with my journey beginning with the Pentax Spotmatic, my first professional camera. Quickly immersing myself in the world of analog photography, I found myself captivated by its
+    unique charm. Even today, I continue to explore the intricacies of analog photography.
+    <br><br> This medium affords me the opportunity to capture scenes in a distinct and compelling manner, particularly focusing on urbanscape photography.
+</p>
