--- a/src/app/components/video/video.component.scss
+++ b/src/app/components/video/video.component.scss
@@ -5,70 +5,33 @@
 }
 
 #header1 {
-    margin: 47px 0 0 0;
+    margin-top: 47px;
     text-align: center;
     font-size: 38px;
     font-weight: 700;
     line-height: 44px;
 }
 
+p {
+    margin: 47px 0;
+    width: 846px;
+    font-size: 14px;
+    line-height: 20px;
+}
+
 #paragraph1 {
-    display: flex;
     font-size: 15px;
     text-align: left;
-    margin-top: 73px;
-    line-height: 20px;
-    width: 846px;
+    margin-top: 63px;
 }
 
-#paragraph2 {
-    margin: 47px;
-    width: 846px;
-    font-size: 14px;
-    line-height: 20px;
-}
-
-#paragraph3 {
-    margin: 47px;
-    width: 846px;
-    font-size: 14px;
-    line-height: 20px;
-}
-
-#paragraph4 {
-    margin: 47px;
-    width: 846px;
-    font-size: 14px;
-    line-height: 20px;
-}
-
-#paragraph5 {
-    margin: 47px;
-    width: 846px;
-    font-size: 14px;
-    line-height: 20px;
+iframe {
+    margin-top: 45px;
+    width: 900px;
+    height: 505.53px;
 }
 
 #iframe1 {
     margin-top: 59px;
-    width: 900px;
     height: 675px;
-}
-
-#iframe2 {
-    margin-top: 45px;
-    width: 900px;
-    height: 505.53px;
-}
-
-#iframe3 {
-    margin-top: 45px;
-    width: 900px;
-    height: 505.53px;
-}
-
-#iframe4 {
-    margin-top: 45px;
-    width: 900px;
-    height: 505.53px;
 }
