--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,8 +3,7 @@
         Matthias van Houtum
     </h1>
 </div>
-<img id="portretfoto" src="/66564c2d395bdd3d2b87c5e7_4QG1h8zxSY2WbqGSZ2ur__mg_8137.jpeg"
-    alt="een mooie foto van Matthias van houtum">
+<img id="portretfoto" src="img_8137.jpeg" alt="een mooie foto van Matthias van houtum">
 <p id="paragraph1">From a young age, I've been captivated by the human experience of perceiving the world around us, how
     we shape our realities, and the narratives we construct. Currently, I'm pursuing my studies in IMT, Image and Media
     Technology at HKU; University of
