--- a/src/app/components/photo/photo.component.html
+++ b/src/app/components/photo/photo.component.html
@@ -1,18 +1,54 @@
 <h1 id="header1">Photography</h1>
-<p>Photography has served as my primary outlet for creativity over the years, with my journey beginning with the Pentax Spotmatic, my first professional camera. Quickly immersing myself in the world of analog photography, I found myself captivated by its
+<p id="paragraph1">Photography has served as my primary outlet for creativity over the years, with my journey beginning
+    with the Pentax
+    Spotmatic, my first professional camera. Quickly immersing myself in the world of analog photography, I found myself
+    captivated by its
     unique charm. Even today, I continue to explore the intricacies of analog photography.
-    <br><br> This medium affords me the opportunity to capture scenes in a distinct and compelling manner, particularly focusing on urbanscape photography.
+    <br><br> This medium affords me the opportunity to capture scenes in a distinct and compelling manner, particularly
+    focusing on urbanscape photography.
 </p>
 
-<img src="65f8c680761915ce1814b5a5_BW-Berlijn20230530_11-p-1080.jpeg" class="image-4">
-<img src="65f992bf9e18b97bec258676_napels20240208_14402346_0049.jpg" class="image-8">
-<img src="66053f792f83fed9e58e60c3_napels20240208_14384319_0047.jpg" class="image-21">
-<img src="65f992bf7da8032d583ebcd9_napels20240208_15064266_0066.jpg" class="image-5">
-<img src="65f992a2020ea8765351ae73_BW 1600 dpi20231129_41.jpg" class="image-7">
-<img src="65f992c07761d99099b5e6f3_BW 1600 dpi20231129_25-Edit.jpg" class="image-6">
-<img src="660537a786b3a4bdc1c7bf9e_Ferns-large-size.jpeg" class="image-12">
-<img src="660537ec496490cee57a12c0_test22.jpg" class="image-13">
-<img src="65f992c239f7161230324015_BW Berlijn20230530_25.jpg" class="image-15">
-<img src="660538e77a69bb1d8078930d_Sky large size.png" class="image-14">
-<img src="66053ad18af3bb609939660c_BW 1600 dpi20231129_38-Edit.jpg" class="image-18">
-<img src="65f992bed541111831d08edf_BW 1600 dpi20231129_44.jpg" class="image-22">
+<body>
+    <div class="gallery">
+        <img src="BW-Berlijn20230530_11-p-1080.jpeg" class="single">
+        <img src="napels20240208_14402346_0049.jpg" class="double">
+        <img src="napels20240208_14384319_0047.jpg" class="double">
+        <img src="napels20240208_15064266_0066.jpg" class="single">
+        <p id="paragraph2">This photograph was taken in Naples, Italy, a city that lacks open space and is quite
+            compact. The buildings are tall, and the streets are narrow. I felt as though I was trapped in the city, and
+            I captured this feeling visually. To achieve this, I used a double exposure: first of a fence and then of
+            the quayside. This allowed me to achieve the desired layering and effect that I was seeking for.</p>
+        <img src="BW 1600 dpi20231129_41.jpg" class="double">
+        <img src="BW 1600 dpi20231129_25-Edit.jpg" class="double">
+        <img src="Ferns-large-size-p-1080.jpeg" class="single">
+        <img src="test22.jpg" class="double">
+        <img src="BW Berlijn20230530_25.jpg" class="double">
+        <img src="Sky large size-p-1080.png" class="single">
+        <img src="BW 1600 dpi20231129_38-Edit-p-1080.jpg" class="double">
+        <img src="BW 1600 dpi20231129_44.jpg" class="double">
+        <img src="BW 1600 dpi20231129_54.jpg" class="single">
+        <img src="KL-Berlijn-Frankrijk20230530_20.jpeg" class="double">
+        <img src="BW 20231129_03.jpg" class="double">
+        <img src="color20230424_35-2 copy.jpg" class="single">
+        <img src="BW Berlijn20230530_26-Edit.jpg" class="double">
+        <img src="BW Berlijn20230530_10.jpg" class="double">
+        <img src="BW 1600 dpi20231129_29-Edit.jpg" class="single">
+        <img src="BW Berlijn20230530_22-2.jpg" class="double">
+        <img src="BW Berlijn20230530_33.jpg" class="double">
+        <img src="napels20240208_14003418_0020-2.jpg" class="single">
+        <img src="test18-Edit-2.jpg" class="double">
+        <img src="napels20240208_15032780_0061.jpg" class="double">
+        <img src="Kubus large size.jpg" class="single">
+        <img src="napels20240208_14195011_0035.jpg" class="double">
+        <img src="BW 1600 dpi20231129_37.jpg" class="double">
+        <img src="napels20240208_14453552_0056.jpg" class="single">
+        <img src="napels20240208_14150922_0027.jpg" class="double">
+        <img src="Week 8 foto 4.jpg" class="double">
+        <img src="BW Berlijn20230530_13-2.jpg" class="single">
+        <img src="BW 20231129_22.jpg" class="double">
+        <img src="BW Berlijn20230530_04-2.jpg" class="double">
+        <img src="test32.jpg" class="single">
+        <img src="color20230424_48.jpg" class="double">
+        <img src="napels20240208_13472961_0001.jpg" class="double">
+        <img src="color20230424_19.jpg" class="single">
+    </div>
