--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,15 +1,35 @@
-<!-- <div class="navbar"> -->
+<!-- 
 <div class="container">
     <div class="wrapper">
         <a routerLink="/home" class="title">
             Matthias van Houtum
         </a>
-        <nav class="menu">
+        <nav class="normal-menu">
             <a routerLink="/home" class="link" routerLinkActive="active">About</a>
-
             <a routerLink="/video" class="link" routerLinkActive="active">Video</a>
             <a routerLink="/photo" class="link" routerLinkActive="active">Photo</a>
         </nav>
     </div>
+</div> -->
+<div class="container">
+    <div class="wrapper">
+        <a routerLink="/home" class="title">
+            Matthias van Houtum
+        </a>
+        <nav class="normal-menu">
+            <a routerLink="/home" class="link" routerLinkActive="active">About</a>
+            <a routerLink="/video" class="link" routerLinkActive="active">Video</a>
+            <a routerLink="/photo" class="link" routerLinkActive="active">Photo</a>
+        </nav>
+        <div class="burger-menu" (click)="toggleMobileMenu()">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </div>
+    <div class="mobile-menu" [ngClass]="{'show': isMobileMenuOpen}">
+        <a routerLink="/home" class="link" routerLinkActive="active" (click)="toggleMobileMenu()">About</a>
+        <a routerLink="/video" class="link" routerLinkActive="active" (click)="toggleMobileMenu()">Video</a>
+        <a routerLink="/photo" class="link" routerLinkActive="active" (click)="toggleMobileMenu()">Photo</a>
+    </div>
 </div>
-<!-- </div> -->
