--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,10 +4,12 @@
     </h1>
 </div>
 <img id="portretfoto" src="img_8137.jpeg" alt="een mooie foto van Matthias van houtum">
-<p id="paragraph1">From a young age, I've been captivated by the human experience of perceiving the world around us, how
+<p class="paragraph1 para">From a young age, I've been captivated by the human experience of perceiving the world around
+    us, how
     we shape our realities, and the narratives we construct. Currently, I'm pursuing my studies in IMT, Image and Media
     Technology at HKU; University of
-    the Arts Utrecht.<br><br> In my own visuals, I strive to show the extraordinary within the seemingly ordinary and to
+    the Arts Utrecht.</p>
+<p class="paragraph1"> In my own visuals, I strive to show the extraordinary within the seemingly ordinary and to
     liberate reality from the invented frameworks we impose on it. I draw inspiration from my immediate surroundings,
     such as nature and
     the urban landscape, the often beautiful erosion of lifeless objects, and life beyond the everyday theater of
